templates/wiistock/kubernetes/cache.yaml

apiVersion: v1
kind: Pod
metadata:
  name: wiistock-cache
  namespace: wiistock
spec:
  imagePullSecrets:
  - name: docker-token
  restartPolicy: Never
  volumes:
  - name: project
    emptyDir: {}
  - name: cache
    persistentVolumeClaim:
      claimName: wiistock-cache
  containers:
  - name: cache-initializer
    image: wiilog/cache-initializer:latest
    command: ["/bootstrap/entrypoint.sh"]
    volumeMounts:
    - mountPath: /project
      name: project
    - mountPath: /cache
      name: cache
