templates/wiistock/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: VAR:INSTANCE_NAME
  namespace: wiistock
  labels:
    app: VAR:INSTANCE_NAME
    template: wiistock
spec:
  replicas: VAR:REPLICAS_COUNT
  selector:
    matchLabels:
      app: VAR:INSTANCE_NAME
  template:
    metadata:
      labels:
        app: VAR:INSTANCE_NAME
        template: wiistock
    spec:
      imagePullSecrets:
      - name: docker-token
      volumes:
      - name: project
        emptyDir: {}
      - name: uploads
        persistentVolumeClaim:
          claimName: VAR:INSTANCE_NAME-uploads
      - name: symfony-cache
        emptyDir: {}
      - name: cache
        persistentVolumeClaim:
          claimName: wiistock-cache
      containers:
      - name: wiistock
        image: wiilog/symfony:latest
        command: ["/bootstrap/entrypoint.sh"]
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /project
          name: project
        - mountPath: /project/public/uploads
          name: uploads
        - mountPath: /project/var
          name: symfony-cache

---
apiVersion: v1
kind: Service
metadata:
  name: VAR:INSTANCE_NAME
  namespace: wiistock
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: VAR:INSTANCE_NAME

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: VAR:INSTANCE_NAME
  namespace: wiistock
  annotations:  
    cert-manager.io/issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"  
    nginx.ingress.kubernetes.io/proxy-body-size: 128m
spec:
  tls:
  - hosts: ["VAR:DOMAIN"]
    secretName: follow-gt-tls
  rules:
  - host: VAR:DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: VAR:INSTANCE_NAME
          servicePort: 80
